[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.poetry]
description = "Useful utilities for ASGI based applications."
name        = "narigama-asgi"
readme      = "README.md"
version     = "0.1.0"

authors  = ["David Smith <david@narigama.dev>"]
packages = [{ include = "narigama_asgi" }]

[tool.poetry.dependencies]
python = "^3.11"

argon2-cffi = { version = "*" }
arrow       = { version = "*" }
asyncpg     = { version = "*" }
fastapi     = { version = "*" }
passlib     = { version = "*" }
pypika      = { version = "*" }
loguru      = { version = "*" }

[tool.poetry.group.dev.dependencies]
black   = { version = "*" }
ipython = { version = "*" }
ruff    = { version = "*" }
uvicorn = { version = "*" }

async-asgi-testclient = { version = "^1.4.11" }
freezegun             = { version = "^1.2.2" }
pytest                = { version = "^7.4.0" }
pytest-random-order   = { version = "^1.1.0" }
pytest-asyncio        = { version = "^0.21.1" }
pytest-watcher        = { version = "^0.3.4" }
pytest-env            = { version = "^0.8.2" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--random-order"
env = [
    # D: will rely on the shell's version if it's set
    "D:DATABASE_URL = postgres://narigama:narigama@localhost:5432/narigama?sslmode=disable",
]

[tool.black]
line-length    = 120
target-version = ["py310"]

[tool.ruff]
exclude = ["tests", "tasks.py"]
ignore = [
    "D",     # TODO: remove, ignore all documentation errors for now
    "D100",  # missing docstring on public module
    "D105",  # missing docstring on magic methods
    "D401",  # first line of docstring should be in imperative mood
    "UP032", # require f-strings over .format
    "B008",  # ignore inline calls, blocks fastapi.Depends
]
line-length = 120
select = ["E", "F", "W", "C90", "I", "D", "UP", "S", "B", "A", "COM", "T20", "Q", "SIM", "PTH"]
src = ["narigama_asgi"]

[tool.ruff.per-file-ignores]
"narigama_asgi/__init__.py" = ["F401"]

[tool.ruff.isort]
force-single-line   = true
lines-after-imports = 2

known-first-party = ["narigama_asgi"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]
